# dmedia001_bot

./: Dockerfile  README.md  app.json  config.yaml  deploy.md  docker-compose.yml  fly.toml  heroku.yml  index.html  install.sh  keep_alive.py  main.py  pyproject.toml  pythonanywhere-setup.sh  quick-install.py  render.yaml  replit-setup.py  requirements-minimal.txt  requirements.txt  telegram-hosting-guide.md  vercel.json
src/: config.py  downloader.py  health_check.py  logger.py  telegram_bot.py  url_detector.py
